[tool.poetry]
name = "users_service"
version = "0.1.0"
description = ""
authors = ["José Antonio Córdoba Gómez <joseinn@correo.ugr.es>"]

[tool.poetry.dependencies]
python = "^3.8"
Flask = "^2.0.1"

[tool.poetry.dev-dependencies]
pytest = "^5.2"
poethepoet = "^0.10.0"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.poe.tasks]
expose = {shell = "gunicorn wsgi --chdir users_service/ --bind :3001"}
